# cellophanemail

./: .dockerignore  .env.docker  .env.example  .env.test  .gitignore  CLAUDE.md  CSRF_IMPLEMENTATION_GUIDE.md  DOCKER-QUICKSTART.md  Dockerfile  EMAIL_DELIVERY_SETUP.md  GIT_HISTORY_CLEANUP_REQUIRED.md  LICENSE  LICENSE.commercial  PRD_Authentication_Billing_System.md  PRD_CellophoneMail_Authentication_Billing.md  PRD_CellophoneMail_Frontend_Hotwire.md  PRD_calendease_authentication_billing.md  RAILWAY_DEPLOYMENT.md  README.md  SECURITY_ROTATION.md  STRIPE_TESTS_SUMMARY.md  TDD_PRIVACY_INTEGRATION_PLAN.org  TEST_COVERAGE_REPORT.md  analysis_quality_hybrid_20250820_104240.json  conftest.py  create_test_user.py  demo_email_delivery.py  demo_simple_delivery.py  docker-commands.md  docker-compose.yml  enhanced_system_flow.md  fact_first_flow.md  hybrid_pipeline_dataflow.md  main.py  piccolo_conf.py  postmark_dry_run_20250820.jsonl  pyproject.toml  pytest.ini  railway.toml  test_email_cases.py  (+18 more)
TIL/: python-project-structure-src-vs-flat.md
docker/: init-db.sh
docs/: DEVELOPMENT_WORKFLOW.md  ONBOARDING.md  TESTING_STRATEGY.md  TESTING_WITHOUT_QUOTA.md  WORKFLOW_QUICK_REFERENCE.md  architecture.md  postmark-inbound-setup.md  refactoring_comparison.md
examples/: shared_context_usage.py
migrations/: cellophanemail_2025_08_09t04_33_40_347311.py  cellophanemail_2025_08_14t13_01_51_889108.py  cellophanemail_2025_08_17t16_53_36_871464.py  cellophanemail_2026_01_21t21_22_55_434188.py
protection_logs/: protection_2025-08-19.jsonl  protection_2025-08-20.jsonl  (+9 more)
tests/: helpers.py  (+42 more)
(+220 files in other folders)
